--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,39 +7,52 @@
 <div class="text-center">
     <h1 class="display-4">Kajálda</h1>
 
-    <div class="row">
-        <!-- using (var form = Html.BeginForm()) -->
-        
-            <form method="POST" asp-controller="Home" asp-action="Index" asp-route-id="@Model.Id">
-            <label for="@Model.Id">Id</label>
-            <input type="text" id="Id" />
-            <input type="submit" />
-            </form> 
+        <div class="Name">
+                    @if(!string.IsNullOrEmpty(Model.EmployeeName))
+                    {
+                            <div class="alert alert-primary">
+                                @Model.EmployeeName
+                            </div>
+                    }
+                    else
+                    {
+                        <div>KD</div>
+                    }
+        </div>
 
-        <!--   
-            <div class="col-sm-3">
-                <div class="form-for-id">
-                    @Html.LabelFor(m => m.Id)
-                    @Html.TextBoxFor(m =>m.Id)
-                    <input type="submit" value="OK" />
+        <div class="row">
+            <div class="col">
+                <form method="POST" asp-controller="Home" asp-action="Index">
+                        <label asp-for="EmployeeId">Employee Id</label>
+                        <input asp-for="EmployeeId" />
+                        <input type="submit" />
+                </form>
+                
+
+                <h4>Etelek</h4>
+                <div class="itemek">
+                    <ul>
+                    @if(ViewBag.Basket != null)
+                    {
+                        foreach (var item in ViewBag.Basket)
+                        {
+                            <li>@item.Item1 @item.Item2</li>
+                        }
+                    }
+                    </ul>
                 </div>
             </div>
-        -->
+           
+            <div class="col">
+                <form method="POST" asp-controller="Home" asp-action="OnPostOrderItems">
+                    <label asp-for="ItemName">Termek</label>
+                    <input asp-for="ItemName" />
 
-        @using (var form = Html.BeginForm())
-        {
-            <div class="col-sm-3">
-                @Html.LabelFor(m =>m.ItemName)
-                @Html.TextBoxFor(m =>m.ItemName)
+                    <label asp-for="Quantity">Mennyiseg</label>
+                    <input asp-for="Quantity" />
 
-                @Html.LabelFor(m =>m.Quantity)
-                @Html.TextBoxFor(m =>m.Quantity)
-                <input type="submit" value="OK" />
+                    <input type="submit" />
+                </form>
             </div>
-        }    
-    </div>  
-    
-
-    
-
+        </div>
 </div>
