doing checkout, inserting into...

--- a/Views/Home/Eating.cshtml
+++ b/Views/Home/Eating.cshtml
@@ -11,7 +11,7 @@
 @foreach (var dolgozo in Model)
 {
     <li>
-        @dolgozo.EmployeeId @dolgozo.Name @dolgozo.CostOfConsumption
+        ID: @dolgozo.EmployeeId Osszeg: @dolgozo.CostOfConsumption
     </li>
 }
 </ul>
