--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -25,28 +25,37 @@
                         </div>
                     }
                 </div>
+                <div class="col-3">
+                        <div class="alert alert-info">
+                            Lista modositasa
+                        </div>                    
+                </div>
+                <div class="col-3">
+                        <div class="alert alert-info">
+                            Termek torlese
+                        </div>                    
+                </div>
             </div>
 
             <div class="row">
-                <div class="col-3">
-                    <div class="Fejlec">
-                        <!-- -->
-                    </div>
+                <div class="col-3">                    
 
                     <div class="form-group">
                         <form method="POST" asp-controller="Home" asp-action="Index">
                                 <label asp-for="EmployeeId">Employee Id</label>
-                                <input asp-for="EmployeeId" value="@Model.EmployeeName" class="form-control"/>
-                                <input type="submit" value="OK"/>
+                                <div class="row">
+                                    <div class="col-4"></div>
+                                    <div class="col-4">
+                                <input asp-for="EmployeeId" value="@Model.EmployeeName" class="form-control" />
+                                </div>
+                                </div>
+                                <button class ="btn btn-primary" type="submit">OK</button>
                         </form>
                     </div>
                                     
                 </div>
             
                 <div class="col-3">
-                    <div class="Fejlec">
-                        
-                    </div>
 
                     <div class="form-group">
                         <form method="POST" asp-controller="Home" asp-action="OnPostOrderItems">
@@ -54,8 +63,7 @@
                             <input asp-for="ItemName" class="form-control"/>
                             <label asp-for="Quantity">Mennyiseg</label>
                             <input asp-for="Quantity" value="" class="form-control" />
-
-                            <input type="submit" value="Bevitel" />
+                            <button class ="btn btn-primary" type="submit">Bevitel</button>
                         </form>
                     </div>
                 </div>
@@ -65,11 +73,9 @@
                         <form method="POST" asp-controller="Home" asp-action="OnPostModifyItem">
                             <label asp-for="ItemName">Termek</label>
                             <input asp-for="ItemName" class="form-control" />
-                            <br />
                             <label asp-for="Quantity">Mennyiseg</label>
                             <input asp-for="Quantity" value="" class="form-control"/>
-
-                            <input type="submit" value="Levonas" />
+                            <button class ="btn btn-primary" type="submit">Csokkent</button>
                         </form>
                     </div>
                 </div>
@@ -79,28 +85,63 @@
                         <form method="POST" asp-controller="Home" asp-action="OnPostDeleteItem">
                             <label asp-for="ItemName">Termek</label>
                             <input asp-for="ItemName" class="form-control"/>
-
-                            <input type="submit" value="Torles" />
+                            <button class ="btn btn-primary" type="submit">Torles</button>
                         </form>
                     </div>
                 </div>
             </div>
 
-            <div class="Etelek">
-                <p>Etelek</p>
-                <div class="itemek">
-                    <ul>
-                    @if(ViewBag.Basket != null)
-                    {
-                        foreach (KeyValuePair<string, int> item in ViewBag.Basket)
-                        {
-                            <li>@item.Key @item.Value</li>
-                        }
-                    }
-                    </ul>
+            <div class="row">
+                <div class="col-3">
+                    <div class="container">
+                        <h3>Menu</h3>
+                        <table class="table table-condensed" style="table-layout: fixed; width: 100%;">
+                            <thead>
+                                <tr>
+                                    <th>Termek</th>
+                                    <th>Ar</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @if(ViewBag.Menu != null)                           
+                                    foreach (KeyValuePair<string, int> item in ViewBag.Menu)
+                                    {
+                                        <tr>
+                                            <td>@item.Key</td>
+                                            <td>@item.Value</td>
+                                        </tr>
+                                    }                            
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
-                <input type="button" value="Fizet" onclick="location.href='@Url.Action("OnPostFinishShopping", "Home")'" />
-                <input type="button" value="Torol" onclick="location.href='@Url.Action("OnPostClearBasket", "Home")'" />
+                <div class="col-5">
+                    <div class="container">
+                        <h3>Rendeles</h3>
+                        <table class="table table-condensed" style="table-layout: fixed; width: 100%;">
+                            <thead>
+                                <tr>
+                                    <th>Termek</th>
+                                    <th>Mennyiseg</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            @if(ViewBag.Basket != null)
+                            {
+                                foreach (KeyValuePair<string, int> item in ViewBag.Basket)
+                                {
+                                    <tr>
+                                        <td>@item.Key</td>
+                                        <td>@item.Value</td>
+                                    </tr>
+                                }
+                            }
+                            </tbody>
+                        </table>
+                        <input class="btn btn-success" type="button" value="Fizet" onclick="location.href='@Url.Action("OnPostFinishShopping", "Home")'" />
+                        <input class="btn btn-danger" type="button" value="Torol" onclick="location.href='@Url.Action("OnPostClearBasket", "Home")'" />
+                    </div>
+                </div>
             </div>
         </div>
 </div>
