--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -19,10 +19,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Eating">Fogyasztásriport</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="EatCurrentMonth">Fogyasztásriport</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Consuming">Termék fogyás</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ConsumingCurrentMonth">Termék fogyás</a>
                         </li>
                         
                     </ul>
