--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -12,10 +12,19 @@ a {
   color: #0366d6;
 }
 
+.table {
+  border: 4px solid;
+}
+
+.form-group {
+  border: 1px solid;
+}
+
 .btn-primary {
   color: #fff;
   background-color: #1b6ec2;
   border-color: #1861ac;
+  margin: 10px;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
