--- a/Views/Home/Eating.cshtml
+++ b/Views/Home/Eating.cshtml
@@ -3,15 +3,38 @@
 @{
     ViewData["Title"] = "Dolgozói fogyasztások";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>A dolgozók fogyasztása az aktuális hónapban.</p>
+<br />
+<div class="col-6 text-center">
+    <table class="table table-condensed" style="table-layout: fixed; width: 100%;">
+        <caption style="caption-side: top">A dolgozók havi fogyasztasa</caption>
+        <thead>
+            <tr>
+                <th>Dolgozo azonosito</th>
+                <th>Osszeg</th>
+            </tr>
+        </thead>
 
-<ul>
-@foreach (var dolgozo in Model)
-{
-    <li>
-        ID: @dolgozo.EmployeeId Osszeg: @dolgozo.CostOfConsumption
-    </li>
-}
-</ul>
+        <tbody>
+            @if(Model.Count() != 0)                           
+                foreach (var employee in Model)
+                {
+                    <tr>
+                        <td>@employee.EmployeeId</td>
+                        <td>@employee.CostOfConsumption</td>
+                    </tr>
+                }                            
+        </tbody>
+    </table>
+</div>
+
+<div class="row">
+    <div class="col-4">
+        <form method="POST" asp-controller="Home" asp-action="Eating">
+                <strong><label for="month">Honap valtasa</label></strong>
+                <input name="month" size="2"/>
+                <br />
+                <button class ="btn btn-primary" type="submit">OK</button>
+        </form>
+    </div>
+</div>
