--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Étkezde</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Etkezde</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -19,10 +19,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="EatCurrentMonth">Fogyasztásriport</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Eating">Fogyasztasriport</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ConsumingCurrentMonth">Termék fogyás</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Consuming">Termek fogyas</a>
                         </li>
                         
                     </ul>
@@ -32,6 +32,9 @@
     </header>
     <div class="container">
         <main role="main" class="pb-3">
+        <div class="text-center">
+            <h1 class="display-4">Etkezde</h1>
+        </div>
             @RenderBody()
         </main>
     </div>
