--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -40,9 +40,9 @@
             <div class="col-3">
                 <div class="form-group">
                     <form method="POST" asp-controller="Home" asp-action="Index">
-                            <strong><label asp-for="EmployeeId">Employee Id</label></strong>
+                            <strong><label asp-for="EmployeeId">Dolgozo azonosito</label></strong>
                             <input asp-for="EmployeeId" value="@Model.EmployeeName" class="form-control" />                                
-                            <button class ="btn btn-primary" type="submit">Ok</button>
+                            <button class ="btn btn-primary" type="submit">Kivalaszt</button>
                     </form>
                 </div>
             </div>
