--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -39,9 +39,10 @@
         <div class="row">
             <div class="col-3">
                 <div class="form-group">
-                    <form method="POST" asp-controller="Home" asp-action="Index">
+                    <form method="POST" asp-controller="Home" asp-action="SetId">
                             <strong><label asp-for="EmployeeId">Dolgozo azonosito</label></strong>
-                            <input asp-for="EmployeeId" value="@Model.EmployeeName" class="form-control" />                                
+                            <input asp-for="EmployeeId" name="empid" data-val="true" data-val-required="Add meg!" value="@Model.EmployeeName" class="form-control" />
+                            <span class="field-validation-valid" data-valmsg-for="empid" data-valmsg-replace="true"></span>
                             <button class ="btn btn-primary" type="submit">Kivalaszt</button>
                     </form>
                 </div>
@@ -51,9 +52,11 @@
                 <div class="form-group">
                     <form method="POST" asp-controller="Home" asp-action="OnPostOrderItems">
                         <strong><label asp-for="ItemName">Termek</label></strong>
-                        <input asp-for="ItemName" class="form-control"/>                            
+                        <input asp-for="ItemName" class="form-control"/>
+                        <span asp-validation-for="ItemName" class="text-danger"></span>
                         <strong><label asp-for="Quantity">Darab</label></strong>
                         <input asp-for="Quantity" value="" size="2" />
+                        <span asp-validation-for="Quantity" class="text-danger"></span>
                         <button class ="btn btn-primary" type="submit">Bevitel</button>
                     </form>
                 </div>
