--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -51,6 +51,7 @@
         
             <div class="col-3">
                 <div class="form-group">
+                    <!--
                     @using (Html.BeginForm("OnPostOrderItems", "Home"))
                     {
                         @Html.AntiForgeryToken();
@@ -69,15 +70,16 @@
                         <br />
                         @Html.ValidationMessageFor(m => m.Quantity)
                     }
-                    <!-- <form method="POST" asp-controller="Home" asp-action="OnPostOrderItems">
+                     -->
+                     <form method="POST" data-ajax="true" data-ajax-url="/Home/OnPostOrderItems" data-ajax-update="#basket">
                         <strong><label asp-for="ItemName">Termek</label></strong>
                         <input asp-for="ItemName" class="form-control"/>
                         <strong><label asp-for="Quantity">Darab</label></strong>
                         <input asp-for="Quantity" value="" size="2" />                        
-                        <button class ="btn btn-primary" type="submit">Bevitel</button>
+                        <button class ="btn btn-primary" type="submit" >Bevitel</button>
                         <p><span asp-validation-for="ItemName" class="text-danger"></span>
                         <span asp-validation-for="Quantity" class="text-danger"></span></p>
-                    </form>    -->
+                    </form>   
                 </div>
             </div>
 
@@ -167,32 +169,8 @@
             </div>
 
             <div class="col-5">
-
-                <div id="basket" class="container">
-                    <h3>Rendeles</h3>
-                    <table class="table table-condensed" style="table-layout: fixed; width: 100%;">
-                        <thead>
-                            <tr>
-                                <th>Termek</th>
-                                <th>Mennyiseg</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        @if(ViewBag.Basket != null)
-                        {
-                            foreach (KeyValuePair<string, int> item in ViewBag.Basket)
-                            {
-                                <tr>
-                                    <td>@item.Key</td>
-                                    <td>@item.Value</td>
-                                </tr>
-                            }
-                        }
-                        </tbody>
-                    </table>
-                    <input class="btn btn-success" type="button" value="Fizet" onclick="location.href='@Url.Action("OnPostFinishShopping", "Home")'" />
-                    <input class="btn btn-danger" type="button" value="Torol" onclick="location.href='@Url.Action("OnPostClearBasket", "Home")'" />
-                </div>
+                <h3>Rendeles</h3>
+                <div id="basket" class="container"></div>                     
             </div>
         </div>
     </div>
