--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -77,9 +77,9 @@
                         <strong><label asp-for="Quantity">Darab</label></strong>
                         <input asp-for="Quantity" value="" size="2" />                        
                         <button class ="btn btn-primary" type="submit" >Bevitel</button>
-                        <p><span asp-validation-for="ItemName" class="text-danger"></span>
-                        <span asp-validation-for="Quantity" class="text-danger"></span></p>
-                    </form>   
+                        <br/><span asp-validation-for="ItemName" class="text-danger"></span><br/>
+                        <span asp-validation-for="Quantity" class="text-danger"></span>
+                    </form>
                 </div>
             </div>
 
